--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
 <div fxLayout class="card-container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="5%">
   <app-config></app-config>
+  <app-dsp-live-stats></app-dsp-live-stats>
 </div>
