--- a/src/app/dsp-live-stats/component/dsp-live-stats.component.html
+++ b/src/app/dsp-live-stats/component/dsp-live-stats.component.html
@@ -3,7 +3,13 @@
       <mat-card-title style="margin-left:-18px;">Live Stats</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <div fxLayout="row">
+        <div fxLayout="row">
+            <mat-label class="mat-label-slide-toggle" >Receive Channel: {{(trackStatus$ | async).receiveChannelClient}}</mat-label>
+          </div>
+          <div fxLayout="row">
+            <mat-label class="mat-label-slide-toggle" >Send Channel: {{(trackStatus$ | async).sendChannelClient}}</mat-label>
+          </div>
+        <div fxLayout="row">
         <mat-label class="mat-label-slide-toggle" >Total Totes: {{(trackStatus$ | async).totalTotes}}</mat-label>
       </div>
       <div fxLayout="row">
