--- a/src/app/config/component/config.component.scss
+++ b/src/app/config/component/config.component.scss
@@ -11,3 +11,7 @@ mat-label.mat-label-slide-toggle {
 mat-slide-toggle.config-slider {
   padding: 8px;
 }
+
+[hidden] {
+  display: none !important;
+}
