--- a/src/app/tote-summary/component/tote-summary.component.html
+++ b/src/app/tote-summary/component/tote-summary.component.html
@@ -1,5 +1,8 @@
 <mat-card>
     <mat-card-content>
+        <mat-form-field>
+            <input matInput placeholder="Search totes" #input/>
+        </mat-form-field>
         <mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
             <ng-container matColumnDef="id">
