--- a/src/app/tote-summary/component/tote-summary.component.html
+++ b/src/app/tote-summary/component/tote-summary.component.html
@@ -1,3 +1,4 @@
+<div class="toteSummary">
 <mat-card>
     <mat-card-content>
         <mat-form-field>
@@ -40,3 +41,4 @@
                    [pageSizeOptions]="[3, 5, 10]"></mat-paginator>
     </mat-card-content>
 </mat-card>
+</div>
