--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,7 @@
-<div fxLayout class="card-container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="5%">
+<mat-toolbar color="primary">
+  CPAS Stub Control Centre
+</mat-toolbar>
+<div fxLayout class="card-container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="1%">
   <app-config></app-config>
   <app-dsp-live-stats></app-dsp-live-stats>
   <app-tote-summary></app-tote-summary>
