--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,4 +5,5 @@
   <app-config></app-config>
   <app-dsp-live-stats></app-dsp-live-stats>
   <app-tote-summary></app-tote-summary>
+  <app-tote-messages></app-tote-messages>
 </div>
