--- a/src/app/tote-summary/component/tote-summary.component.html
+++ b/src/app/tote-summary/component/tote-summary.component.html
@@ -34,7 +34,7 @@
         
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         
-            <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+            <mat-row *matRowDef="let row; columns: displayedColumns" [ngClass]="{ 'selected': selection.isSelected(row)}"  (click)="selection.select(row)"></mat-row>
         
         </mat-table>
         <mat-paginator [length]="(pageInfo$ | async).totalEntries" [pageSize]="3"
