Added message view component and store

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,4 +6,5 @@
   <app-dsp-live-stats></app-dsp-live-stats>
   <app-tote-summary></app-tote-summary>
   <app-tote-messages></app-tote-messages>
+  <app-view-message></app-view-message>
 </div>
