--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,14 @@
-<mat-toolbar color="primary">
-  CPAS Stub Control Centre
-</mat-toolbar>
-<div fxLayout class="card-container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="1%">
-  <app-config></app-config>
-  <app-dsp-live-stats></app-dsp-live-stats>
-  <app-tote-summary></app-tote-summary>
-  <app-tote-messages></app-tote-messages>
-  <app-view-message></app-view-message>
+<div fxLayout="row wrap">
+  <div fxLayout="row" fxFlex="100%">
+    <mat-toolbar color="primary">
+      CPAS Stub Control Centre
+    </mat-toolbar>
+  </div>
+  <div class="card-container" fxLayout="row wrap" fxLayoutGap="16px grid" fxFlex="100%" fxFlex.xs="100%" fxFlex.sm="33%">
+      <app-config></app-config>
+      <app-dsp-live-stats></app-dsp-live-stats>
+      <app-tote-summary></app-tote-summary>
+      <app-tote-messages></app-tote-messages>
+      <app-view-message></app-view-message>
+  </div>
 </div>
