--- a/src/app/tote-messages/component/tote-messages.component.html
+++ b/src/app/tote-messages/component/tote-messages.component.html
@@ -1,5 +1,8 @@
 <div class="toteMessages">
     <mat-card>
+        <mat-card-header>
+            <mat-card-title style="margin-left:-18px;">Tote Messages</mat-card-title>
+        </mat-card-header>        
         <mat-card-content>
             <mat-table class="mat-elevation-z8" [dataSource]="dataSource"  matSort matSortActive="creationTime" matSortDirection="asc" matSortDisableClear>
                
