--- a/src/app/tote-summary/component/tote-summary.component.html
+++ b/src/app/tote-summary/component/tote-summary.component.html
@@ -1,9 +1,13 @@
 <div class="toteSummary">
 <mat-card>
-    <mat-card-content>
+    <mat-card-title-group>
+        <mat-card-title>Totes</mat-card-title>
+        <span class="fill-remaining-space"></span>
         <mat-form-field>
             <input matInput placeholder="Search totes" #input/>
         </mat-form-field>
+    </mat-card-title-group>    
+    <mat-card-content>
         <mat-table class="mat-elevation-z8" [dataSource]="dataSource">
 
             <ng-container matColumnDef="id">
@@ -39,13 +43,6 @@
         </mat-table>
         <mat-paginator [length]="(pageInfo$ | async).totalEntries" [pageSize]="3"
                    [pageSizeOptions]="[3, 5, 10]"></mat-paginator>
-<!--
-        <mat-card-actions fxLayout="row" fxLayoutAlign='space-evenly center'>
-            <button mat-fab matTooltip="Refresh" color='primary' (click)="onRefresh()">
-                <mat-icon>refresh</mat-icon>
-            </button>
-        </mat-card-actions>      
-    -->
     </mat-card-content>
 </mat-card>
 </div>
