--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,6 +2,12 @@
   <div fxLayout="row" fxFlex="100%">
     <mat-toolbar color="primary">
       CPAS Stub Control Centre
+      <span class="fill-remaining-space"></span>
+      <mat-form-field>
+        <input matInput placeholder="CPAS Stub Host" #input/>
+    </mat-form-field>
+    <button *ngIf="!(socketStatus$ | async).connected" mat-mini-fab matTooltip="Connect to Live Stats Server" (click)="onConnect(input.value)"><mat-icon>flash_on</mat-icon></button>
+    <button *ngIf="(socketStatus$ | async).connected" mat-mini-fab matTooltip="Diconnect Live Stats Server" (click)="onDisconnect()"><mat-icon>flash_off</mat-icon></button>
     </mat-toolbar>
   </div>
   <div class="card-container" fxLayout="row wrap" fxLayoutGap="16px grid" fxFlex="100%" fxFlex.xs="100%" fxFlex.sm="33%">
