--- a/src/app/config/component/config.component.html
+++ b/src/app/config/component/config.component.html
@@ -5,43 +5,43 @@
     <mat-card-content>
       <div fxLayout="row">
         <mat-label class="mat-label-slide-toggle" fxFlex="60%">OSR Releasing</mat-label>
-        <mat-slide-toggle class="config-slide-toggle" labelPosition="before" [disabled] = true [checked] = "release$ | async"></mat-slide-toggle>
+        <mat-slide-toggle class="config-slide-toggle" labelPosition="before" [disabled] = true [checked] = "(config$ | async).releasing"></mat-slide-toggle>
       </div>
       <div fxLayout="row">
         <mat-label class="mat-label-slide-toggle" fxFlex="60%">Include FMD</mat-label>
-        <mat-slide-toggle [disabled] = "release$ | async" class="config-slide-toggle" labelPosition="before" (change)="onChangeFMD($event)" [checked] = "includeFMD$ | async"></mat-slide-toggle>
+        <mat-slide-toggle [disabled] = "(config$ | async).releasing" class="config-slide-toggle" labelPosition="before" (change)="onChangeFMD($event)" [checked] = "(config$ | async).includeFMD"></mat-slide-toggle>
       </div>
       <div fxLayout="row">
         <mat-label class="mat-label-slide-toggle" fxFlex="60%"> Send 32R Short</mat-label>
-        <mat-slide-toggle class="config-slide-toggle" [disabled] = "release$ | async" labelPosition="before" (change)="onChange32RShort($event)" [checked] = "send32R$ | async"></mat-slide-toggle>
+        <mat-slide-toggle class="config-slide-toggle" [disabled] = "(config$ | async).releasing" labelPosition="before" (change)="onChange32RShort($event)" [checked] = "(config$ | async).sendThirtyTwoRShort"></mat-slide-toggle>
       </div>
       <div fxLayout="row">
         <mat-label class="mat-label-slider" fxFlex="60%">Tote Release Interval</mat-label>
-        <mat-slider labelPosition="before" [disabled] = "release$ | async" [value] = "toteRelease$ | async" (change)="onChangeToteInterval($event)" thumbLabel [displayWith]="formatSecondsLabel" min="1" max="5000"></mat-slider>
+        <mat-slider labelPosition="before" [disabled] = "(config$ | async).releasing" [value] = "(config$ | async).toteReleaseInterval" (change)="onChangeToteInterval($event)" thumbLabel [displayWith]="formatSecondsLabel" min="1" max="5000"></mat-slider>
       </div>
       <div fxLayout="row">
         <mat-label class="mat-label-slider" fxFlex="60%">Tote Track Travel Time</mat-label>
-        <mat-slider labelPosition="before" [disabled] = "release$ | async" [value] = "toteTravelTime$ | async" (change)="onChangeTravelTime($event)" thumbLabel [displayWith]="formatSecondsLabel" min="1" max="10000"></mat-slider>
+        <mat-slider labelPosition="before" [disabled] = "(config$ | async).releasing" [value] = "(config$ | async).toteTrackTravelTime" (change)="onChangeTravelTime($event)" thumbLabel [displayWith]="formatSecondsLabel" min="1" max="10000"></mat-slider>
       </div>  
       <div fxLayout="row">
         <mat-label class="mat-label-slider" fxFlex="60%"> Max Totes On Track</mat-label>
-        <mat-slider labelPosition="before" [disabled] = "release$ | async" [value] = "maxTotes$ | async" (change)="onChangeMaxTotes($event)" thumbLabel min="1" max="10"></mat-slider>
+        <mat-slider labelPosition="before" [disabled] = "(config$ | async).releasing" [value] = "(config$ | async).maxTotesOnTrack" (change)="onChangeMaxTotes($event)" thumbLabel min="1" max="10"></mat-slider>
       </div>    
     </mat-card-content>
-    <mat-card-actions fxLayout="row" fxLayoutAlign='space-evenly center'>
-      <button mat-fab matTooltip="Send Config To Server" [disabled] = "(release$ | async) || resetting" color='primary' (click)='onClickSendConfig()'>
+    <mat-card-actions *ngIf="(socketStatus$ | async).host.length > 0" fxLayout="row" fxLayoutAlign='space-evenly center'>
+      <button mat-fab matTooltip="Send Config To Server" [disabled] = "(config$ | async).releasing || resetting" color='primary' (click)='onClickSendConfig()'>
         <mat-icon>save</mat-icon>
       </button>
-      <button mat-fab matTooltip="Upload Master Data" [disabled] = "(release$ | async) || resetting" color='primary' (click)="openUploadDialog()">
+      <button mat-fab matTooltip="Upload Master Data" [disabled] = "(config$ | async).releasing || resetting" color='primary' (click)="openUploadDialog()">
         <mat-icon>cloud_upload</mat-icon>
       </button>
-      <button [hidden]="releasing" mat-fab matTooltip="Start OSR Release" [disabled] = "resetting" color='primary' (click)="onClickOSRStart()">
+      <button [hidden]="(config$ | async).releasing" mat-fab matTooltip="Start OSR Release" [disabled] = "resetting" color='primary' (click)="onClickOSRStart()">
         <mat-icon>play_arrow</mat-icon>
       </button>
-      <button [hidden]="!releasing" mat-fab matTooltip="Stop OSR Release" [disabled] = "resetting" color='primary' (click)="onClickOSRStop()">
+      <button [hidden]="!(config$ | async).releasing" mat-fab matTooltip="Stop OSR Release" [disabled] = "resetting" color='primary' (click)="onClickOSRStop()">
         <mat-icon>stop</mat-icon>
       </button>
-      <button mat-fab matTooltip="Reset Run" [disabled] = "(release$ | async) || resetting" color='primary' (click)="onClickResetRun()">
+      <button mat-fab matTooltip="Reset Run" [disabled] = "(config$ | async).releasing || resetting" color='primary' (click)="onClickResetRun()">
         <mat-icon>replay</mat-icon>
       </button>
     </mat-card-actions>
