Moved connect / disconnect socket button to header

--- a/src/app/dsp-live-stats/component/dsp-live-stats.component.html
+++ b/src/app/dsp-live-stats/component/dsp-live-stats.component.html
@@ -1,6 +1,9 @@
 <mat-card>
     <mat-card-header>
       <mat-card-title style="margin-left:-18px;">Live Stats</mat-card-title>
+      <span class="fill-remaining-space"></span>
+      <button *ngIf="!((socketStatus$ | async).connected) && (socketStatus$ | async).host.length > 0" mat-mini-fab matTooltip="Connect To Live Stats Web Socket" (click)="onConnect()"><mat-icon>flash_on</mat-icon></button>
+      <button *ngIf="((socketStatus$ | async).connected) && (socketStatus$ | async).host.length > 0" mat-mini-fab matTooltip="Disconnect From Live Stats Web Socket" (click)="onDisconnect()"><mat-icon>flash_off</mat-icon></button>
     </mat-card-header>
     <mat-card-content>
         <div fxLayout="row">
@@ -29,8 +32,6 @@
       </div>
     </mat-card-content>
     <mat-card-actions>
-      <button *ngIf="!((socketStatus$ | async).connected) && (socketStatus$ | async).host.length > 0" mat-mini-fab matTooltip="Connect To Live Stats Web Socket" (click)="onConnect()"><mat-icon>flash_on</mat-icon></button>
-      <button *ngIf="((socketStatus$ | async).connected) && (socketStatus$ | async).host.length > 0" mat-mini-fab matTooltip="Disconnect From Live Stats Web Socket" (click)="onDisconnect()"><mat-icon>flash_off</mat-icon></button>
     </mat-card-actions>
 </mat-card>
 
