Added Raw / Pretty capability to View Message

--- a/src/app/dsp-live-stats/component/dsp-live-stats.component.html
+++ b/src/app/dsp-live-stats/component/dsp-live-stats.component.html
@@ -2,8 +2,8 @@
     <mat-card-header>
       <mat-card-title style="margin-left:-18px;">Live Stats</mat-card-title>
       <span class="fill-remaining-space"></span>
-      <button *ngIf="!((socketStatus$ | async).connected) && (socketStatus$ | async).host.length > 0" mat-mini-fab matTooltip="Connect To Live Stats Web Socket" (click)="onConnect()"><mat-icon>power</mat-icon></button>
-      <button *ngIf="((socketStatus$ | async).connected) && (socketStatus$ | async).host.length > 0" mat-mini-fab matTooltip="Disconnect From Live Stats Web Socket" (click)="onDisconnect()"><mat-icon>power_off</mat-icon></button>
+      <button *ngIf="!((socketStatus$ | async).connected) && (socketStatus$ | async).host.length > 0" color="primary" mat-mini-fab matTooltip="Connect To Live Stats Web Socket" (click)="onConnect()"><mat-icon>power</mat-icon></button>
+      <button *ngIf="((socketStatus$ | async).connected) && (socketStatus$ | async).host.length > 0" color="primary"  mat-mini-fab matTooltip="Disconnect From Live Stats Web Socket" (click)="onDisconnect()"><mat-icon>power_off</mat-icon></button>
     </mat-card-header>
     <mat-card-content>
         <div fxLayout="row">
