Changed effects & services to use host from store

--- a/src/app/config/component/config.component.html
+++ b/src/app/config/component/config.component.html
@@ -29,19 +29,19 @@
       </div>    
     </mat-card-content>
     <mat-card-actions *ngIf="(socketStatus$ | async).host.length > 0" fxLayout="row" fxLayoutAlign='space-evenly center'>
-      <button mat-fab matTooltip="Send Config To Server" [disabled] = "(config$ | async).releasing || resetting" color='primary' (click)='onClickSendConfig()'>
+      <button mat-fab matTooltip="Send Config To Server" [disabled] = "(config$ | async).releasing" color='primary' (click)='onClickSendConfig()'>
         <mat-icon>save</mat-icon>
       </button>
-      <button mat-fab matTooltip="Upload Master Data" [disabled] = "(config$ | async).releasing || resetting" color='primary' (click)="openUploadDialog()">
+      <button mat-fab matTooltip="Upload Master Data" [disabled] = "(config$ | async).releasing" color='primary' (click)="openUploadDialog()">
         <mat-icon>cloud_upload</mat-icon>
       </button>
-      <button [hidden]="(config$ | async).releasing" mat-fab matTooltip="Start OSR Release" [disabled] = "resetting" color='primary' (click)="onClickOSRStart()">
+      <button [hidden]="(config$ | async).releasing" mat-fab matTooltip="Start OSR Release" color='primary' (click)="onClickOSRStart()">
         <mat-icon>play_arrow</mat-icon>
       </button>
-      <button [hidden]="!(config$ | async).releasing" mat-fab matTooltip="Stop OSR Release" [disabled] = "resetting" color='primary' (click)="onClickOSRStop()">
+      <button [hidden]="!(config$ | async).releasing" mat-fab matTooltip="Stop OSR Release" color='primary' (click)="onClickOSRStop()">
         <mat-icon>stop</mat-icon>
       </button>
-      <button mat-fab matTooltip="Reset Run" [disabled] = "(config$ | async).releasing || resetting" color='primary' (click)="onClickResetRun()">
+      <button mat-fab matTooltip="Reset Run" [disabled] = "(config$ | async).releasing" color='primary' (click)="onClickResetRun()">
         <mat-icon>replay</mat-icon>
       </button>
     </mat-card-actions>
