--- a/src/app/view-message/component/view-message.component.html
+++ b/src/app/view-message/component/view-message.component.html
@@ -1,22 +1,25 @@
-<mat-card class="message-view-card">
+<mat-card>
         <mat-card-header>
                 <mat-card-title style="margin-left:-18px;">Message Content</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+                <mat-form-field fxFlex="100" *ngIf="pretty" appearance="none">
+                        <textarea  matInput readonly cdkTextareaAutosize
+                        cdkAutosizeMinRows="2"
+                        cdkAutosizeMaxRows="40"
+                        placeholder="MessageContent" >{{(message$ | async).message | json}}
+                        </textarea>
+                </mat-form-field>
+                <mat-form-field fxFlex="100" *ngIf="!pretty" appearance="none">
+                        <textarea matInput readonly cdkTextareaAutosize
+                        cdkAutosizeMinRows="2"
+                        cdkAutosizeMaxRows="15"
+                        placeholder="MessageContent" >{{(message$ | async).rawMessage}}
+                        </textarea>
+                </mat-form-field>
+        </mat-card-content>        
+        <mat-card-actions>
                 <button mat-mini-fab color="primary" matTooltip="Toggle Raw / Pretty View" (click)="togglePretty()"><mat-icon>flip</mat-icon></button>
-        </mat-card-header>        
-        <mat-form-field *ngIf="pretty" class="message-view" appearance="none">
-                <textarea matInput readonly cdkTextareaAutosize
-                cdkAutosizeMinRows="2"
-                cdkAutosizeMaxRows="15"
-                placeholder="MessageContent" >{{(message$ | async).message | json}}
-                </textarea>
-        </mat-form-field>
-        <mat-form-field *ngIf="!pretty" class="message-view" appearance="none">
-                <textarea matInput readonly cdkTextareaAutosize
-                cdkAutosizeMinRows="2"
-                cdkAutosizeMaxRows="15"
-                placeholder="MessageContent" >{{(message$ | async).rawMessage}}
-                </textarea>
-        </mat-form-field>
-
+        </mat-card-actions>
 </mat-card>
 
